--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.76.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.39.3",
+    "drizzle-zod": "^0.7.1",
     "framer-motion": "^12.10.5",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
