--- a/package.json
+++ b/package.json
@@ -10,18 +10,6 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.50.4",
-    "@tanstack/react-query": "^5.76.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.39.3",
-    "drizzle-zod": "^0.7.1",
-    "framer-motion": "^12.10.5",
-    "lucide-react": "^0.509.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-helmet-async": "^2.0.5",
-    "tailwind-merge": "^3.3.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -49,14 +37,28 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "react-day-picker": "^8.10.1",
-    "embla-carousel-react": "^8.6.0",
-    "recharts": "^2.15.2",
+    "@tanstack/react-query": "^5.76.0",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "vaul": "^1.1.2",
-    "react-hook-form": "^7.56.3",
+    "drizzle-orm": "^0.39.3",
+    "drizzle-zod": "^0.7.1",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.10.5",
     "input-otp": "^1.4.2",
-    "react-resizable-panels": "^2.1.7"
+    "lucide-react": "^0.509.0",
+    "next": "15.3.2",
+    "postcss": "^8.5.3",
+    "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.3",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.2",
+    "tailwind-merge": "^3.3.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -66,7 +68,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
