--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@suiet/wallet-kit": "^0.4.1",
     "@tanstack/react-query": "^5.76.1",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
